...
                }
            }

            // 3. Start/Play Button
            VStack(spacing: 50) {
                if !isPlaying {
                    CustomHeader(config: .init(title: appState.localized("Hole in the Wall")))
                        .accessibilityIdentifier("holeInTheWallTitle")
                }

                VStack(spacing: 40) {
                    if !isPlaying {
                        Button(action: {
...
                                .resizable()
                                .scaledToFit()
                                .frame(width: 40, height: 40)
                                .foregroundColor(.darkBlue)
                                .padding(.trailing, -5)
                        }
                        .accessibilityIdentifier("modeButton")
                    }

                    if isPlaying {
                        VStack {
                            HStack {
                                Spacer()
...
                                .resizable()
                                .scaledToFit()
                                .frame(width: 40, height: 40)
                                .foregroundColor(.darkBlue)
                                .padding()
                        }
                        .accessibilityIdentifier("exitButton")
                    }
                }
                Spacer()
            }

            // 5. Countdown Overlay
...
    @State private var isMusicMuted: Bool = false

    
    @EnvironmentObject var appState: AppState

    enum Difficulty: String, CaseIterable, Identifiable {
        case easy = "Easy"
        case hard = "Hard"

        var id: String { self.rawValue }
    }
    
    enum Theme: String, CaseIterable, Identifiable {
        case basic = "Basic"
...
        case dark = "Dark"

        var id: String { self.rawValue }
    }
    
    enum GameMode: String, CaseIterable, Identifiable {
        case normal = "Normal"
        case accessibility = "Accessibility"
        case random = "Random"

        var id: String { self.rawValue }
    }
    
    
    var body: some View {
        ScrollView {
            VStack(spacing: 15) {
                CustomHeader(config: .init(title: appState.localized("Game Settings")))
                    .accessibilityLabel("modeSelectionTitle")
                
                VStack {
                    // Difficulty Picker
                    CustomText(config: .init(text: appState.localized("Difficulty")))
                    
                    Picker("Difficulty", selection: $selectedDifficulty) {
...
                    )
                }
                
                // Close Button
                CustomButton(
                    config: CustomButtonConfig(
                        title: appState.localized("Close"), width: 150, buttonColor: .darkBlue,
                        action: {
                            showSettings = false
                            if openedFromPauseMenu {
                                showPauseMenu = true  // only reopen pause menu if settings were opened from it
                            }  // Reopen pause menu
                        })
...
