...
    @State private var password: String = ""
    @State private var confirmPassword: String = ""
    @State private var isLoginMode: Bool = true
    @State private var errorMessage: String?
    @State private var navigateToMainPage = false

    let images = ["pfp1", "pfp2", "pfp3", "pfp4", "pfp5", "pfp6"]

    var body: some View {
        NavigationStack {
            ZStack {
                Image("background")
                    .resizable()
...
                                .frame(width: 120, height: 120)
                                .clipShape(Circle())
                                .overlay(Circle().stroke(.darkBlue, lineWidth: 3))
                                .onTapGesture {
                                    showSelector.toggle()
                                }
                                .accessibilityIdentifier("profilePicture")
                            
                            Text("Username")
                                .font(.headline)
                                .foregroundColor(.black)
                            TextField("Enter your username", text: $username)
                                .font(.title2)
                                .padding()
                                .frame(width: 250)
                                .background(Color.white.opacity(0.8))
                                .cornerRadius(10)
                                .overlay(RoundedRectangle(cornerRadius: 10).stroke(Color.gray, lineWidth: 1))
                                .multilineTextAlignment(.leading)
                                .accessibilityLabel("usernameField")
                                .foregroundColor(.black)

                            if showCopiedMessage {
                                Text(appState.localized("Copied to clipboard!"))
                                    .font(.caption)
                                    .foregroundColor(.green)
...
                VStack {
                    Text(appState.localized("Select Your Profile Picture"))
                        .font(.title)
                        .fontWeight(.bold)
                        .foregroundColor(Color("DarkBlue"))
                        .padding(.top, 20)
                        .accessibilityIdentifier("picSelectScreen")
                    
                    LazyVGrid(columns: Array(repeating: .init(.flexible()), count: 3), spacing: 15) {
                        ForEach(images, id: \.self) { imageName in
                            Image(imageName)
                                .resizable()
                                .scaledToFit()
...
